[FIX] Align center list-dots

--- a/src/styles/components/_list-dots.scss
+++ b/src/styles/components/_list-dots.scss
@@ -169,6 +169,9 @@
 .list-dots__content {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+
+  height: 160px;
 }
 
 @include media('<wide') {
@@ -203,7 +206,6 @@
 .list-dots__content-text {
   flex: 0 0 auto;
 
-  height: 160px;
   width: calc(50% - #{$unit * 1.5}px);
   margin: 0 0 0 #{$unit * 3}px;
 }
